Login template and basic views

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="blue-grey">
     <ion-title>
-      About
+      Buscar
     </ion-title>
   </ion-navbar>
 </ion-header>
