--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content class="login">
+<ion-content class="login" padding>
   <div text-center>
     <h1 class="nica-title" color="white"><span class="n-logo">N</span>icaLiv<span class="e-logo">e</span></h1>
   </div>
@@ -16,13 +16,15 @@
 
     <ion-card-content>
       <div class="login-buttons">
-        <button ion-button full round><ion-icon name="logo-facebook" class="fb-icon"></ion-icon>Iniciar con Facebook</button>
+        <button ion-button icon-left full round (click)="doFacebookLogin()">
+          <ion-icon name="logo-facebook"></ion-icon>
+          iniciar con facebook
+          </button>
         <button ion-button full clear color="light" (click)="gotoHomePage()">Continuar como invitado</button>
       </div>
     </ion-card-content>
   </ion-card>
-
+</ion-content>
   <footer>
     <a href="#">Politicas de privacidad</a>
   </footer>
-</ion-content>
