fix image path for android

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,7 +11,7 @@
 
   <ion-card text-center class="login-card">
     <ion-card-header center-text>
-      <img src="../assets/avatar.gif" alt="Avatar" class="login-avatar">
+      <img src="assets/avatar.png" class="login-avatar">
     </ion-card-header>
 
     <ion-card-content>
